# behold

./: CMakeLists.txt  README.md  build.ps1  run.ps1
sources/: main.cpp  null_platform.cpp  platform.hpp  win_platform.cpp
